add some styling and animations

--- a/index.html
+++ b/index.html
@@ -12,48 +12,59 @@
     <link href="https://fonts.googleapis.com/css2?family=Heebo:wght@600&display=swap" rel="stylesheet"> 
 </head>
 <body>
-    <img src="controller.png" alt="" class="controller">
-    <img src="tv.jpg" alt="" class="tv">
-    <section class="home">
-        <nav>
-            <h1 class="sliding-text">One step closer <br>to know Miro</br></h1>
-            <ul>
-                <li><a href="#">Home</a></li>
-                <li><a href="#">About Me</a></li>
-                <li><a href="#">Projects</a></li>
-                <li><a href="#">Contact</a></li>
-            </ul>
-        </nav>
-        <h1 class="logo">Game Zone</h1>
-    </section>
-    <section class="first-page">
-        <div class="intro">
-            <h2>Tic Tac Toe Game</h2>
-            <p>sdvsd sfdfsd fsdf sdg fsgg hhgfhj fhfgj hj hgfhfg hd fsdf sdg jf hdv xcv xdgsgsdgs wd fsdgs gs dgdsds </p>
-        </div>
-        <img src="pexels-elīna-arāja-3400795.jpg" alt="">
-    </section>
-    <section class="first-page">
-        <img src="pexels-monstera-7352866.jpg" alt="">
-        <div class="intro">
-            <h2>Maze Game</h2>
-            <p>sdvsd sfdfsd fsdf sdg fsgg hhgfhj fhfgj hj hgfhfg hd fsdf sdg jf hdv xcv xdgsgsdgs wd fsdgs gs dgdsds </p>
-        </div>
-    </section>
-    <section class="contact-page">
-        <div class="main">
-            <h2>Maze Game</h2>
-            <p>sdvsd sfdfsd fsdf sdg fsgg hhgfhj fhfgj hj hgfhfg hd fsdf sdg jf hdv xcv xdgsgsdgs wd fsdgs gs dgdsds </p>
-        </div>
-        <div class="social-media">
-            <ul>
-                <li><a href="#"></a></li>
-                <li><a href="#"></a></li>
-                <li><a href="#"></a></li>
-            </ul>
-        </div>
-        <div class="box"></div>
-    </section>
+    <div class="container">
+        <img src="controller.png" alt="" class="controller">
+        <img src="tv.jpg" alt="" class="tv">
+        <section class="home">
+            <nav>
+                <h1 class="sliding-text">One step closer <br>to know Miro</br></h1>
+                <ul>
+                    <li><a href="#">Home</a></li>
+                    <li><a href="#">About Me</a></li>
+                    <li><a href="#">Projects</a></li>
+                    <li><a href="#">Contact</a></li>
+                </ul>
+            </nav>
+            <h1 class="logo">Game Zone</h1>
+        </section>
+        <section class="first-page">
+            <div class="intro">
+                <h2>Tic Tac Toe Game</h2>
+                <p>sdvsd sfdfsd fsdf sdg fsgg hhgfhj fhfgj hj hgfhfg hd fsdf sdg jf hdv xcv xdgsgsdgs wd fsdgs gs dgdsds </p>
+            </div>
+            <img src="pexels-elīna-arāja-3400795.jpg" alt="">
+        </section>
+        <section class="second-page">
+            <img src="pexels-monstera-7352866.jpg" alt="">
+            <div class="intro">
+                <h2>Maze Game</h2>
+                <p>sdvsd sfdfsd fsdf sdg fsgg hhgfhj fhfgj hj hgfhfg hd fsdf sdg jf hdv xcv xdgsgsdgs wd fsdgs gs dgdsds </p>
+            </div>
+        </section>
+        <section class="contact-page">
+            <div class="main">
+                <h2>Contact Us</h2>
+                <p>Simple text. Click to select the text box. Click again or ouble click to start editing the text</p>
+                <div class="info">
+                    <label for="fname">Enter your Name</label>
+                    <input type="text">
+                    <label for="email">Enter a valid email address</label>
+                    <input type="email" id="email" name="email"> 
+                    <label for="fname">Enter your message</label>
+                    <input type="text">
+                    <input type="submit" value="Submit" class="submit">
+                </div>
+            </div>
+            <div class="social-media">
+                <ul>
+                    <li><a href="#"></a></li>
+                    <li><a href="#"></a></li>
+                    <li><a href="#"></a></li>
+                </ul>
+            </div>
+            <div class="box"></div>
+        </section>
+    </div>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.8.0/gsap.min.js" integrity="sha512-eP6ippJojIKXKO8EPLtsUMS+/sAGHGo1UN/38swqZa1ypfcD4I0V/ac5G3VzaHfDaklFmQLEs51lhkkVaqg60Q==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.8.0/ScrollTrigger.min.js" integrity="sha512-CPA5LMoJI/a5HkSIAKcBtFXe4gqGjPUL2ExF/3PmhrrHI17wod9xOqqF+0WZQRKIIq0KwF8oG5BaiWobtrke3A==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
     <script src="app.js"></script>
