--- a/index.html
+++ b/index.html
@@ -47,22 +47,48 @@
                 <p>Simple text. Click to select the text box. Click again or ouble click to start editing the text</p>
                 <div class="info">
                     <label for="fname">Enter your Name</label>
-                    <input type="text">
+                    <input type="text" >
                     <label for="email">Enter a valid email address</label>
                     <input type="email" id="email" name="email"> 
-                    <label for="fname">Enter your message</label>
+                    <label for="lname">Enter your message</label>
                     <input type="text">
                     <input type="submit" value="Submit" class="submit">
                 </div>
             </div>
             <div class="social-media">
-                <ul>
-                    <li><a href="#"></a></li>
-                    <li><a href="#"></a></li>
-                    <li><a href="#"></a></li>
-                </ul>
+                <div class="ul">
+                    <a href="#"><img src="https://img.icons8.com/small/32/000000/facebook-new.png"/></a>
+                    <a href="#"><img src="https://img.icons8.com/small/32/000000/twitter.png"/></a>
+                    <a href="#"><img src="https://img.icons8.com/small/32/000000/instagram-new.png"/></a>
+                    <a href="#"><img src="https://img.icons8.com/small/32/000000/github.png"/></a>
+                </div>
             </div>
-            <div class="box"></div>
+            <div class="box">
+                <div class="box-info">
+                    <svg xmlns="http://www.w3.org/2000/svg" x="0px" y="0px"
+                        width="96" height="96"
+                        viewBox="0 0 172 172"
+                        style=" fill:#000000;"><g fill="none" fill-rule="nonzero" stroke="none" stroke-width="1" stroke-linecap="butt" stroke-linejoin="miter" stroke-miterlimit="10" stroke-dasharray="" stroke-dashoffset="0" font-family="none" font-weight="none" font-size="none" text-anchor="none" style="mix-blend-mode: normal"><path d="M0,172v-172h172v172z" fill="none"></path><g fill="#b4b40a"><path d="M37.12109,11.16993c-10.70801,4.32519 -18.39257,8.52441 -23.89355,12.00976l5.79492,9.07031c4.87109,-3.14942 12.00977,-7.0127 22.12989,-11.16992zM123.96094,11.25391c-8.0625,0 -19.98828,1.0918 -36.44922,5.03906c-0.33594,0.08399 -0.62989,0.08399 -0.92382,0.16797v0.08399c-4.8291,1.17578 -9.95216,2.47753 -15.5791,4.19922c-5.62696,1.72168 -10.62402,3.44335 -15.28516,5.12304h-0.04199c-0.20997,0.04199 -0.41993,0.16797 -0.62989,0.25196c-15.99902,5.87891 -26.62305,11.58984 -33.38379,16.125c-3.82129,2.51953 -6.67676,6.25683 -8.48242,10.49804c-1.84766,4.24121 -2.7295,9.1543 -1.25977,13.9834l4.70313,15.41114l5.12305,-1.51172l5.12304,-1.5957l20.66016,-6.21484l-0.96582,-4.8291c0,0 -1.38574,-7.09668 -0.37793,-14.65527c0.5459,-3.82129 1.67969,-7.60059 3.61133,-10.58203c1.46972,-2.22559 3.31737,-4.07325 6.00487,-5.45899c0.042,0 0.08399,0 0.12598,0c0.67188,-0.37793 1.46973,-0.62989 2.30957,-0.92382c4.74511,-1.76368 9.99414,-3.52734 15.87304,-5.33301c6.04688,-1.84766 11.54785,-3.31739 16.58692,-4.49317c0.29395,-0.08398 0.5459,-0.12598 0.83984,-0.16797c0.50391,-0.12598 0.92383,-0.16797 1.42774,-0.29395c2.93945,-0.33594 5.41699,0.16797 7.85253,1.21778c3.2754,1.38574 6.34082,3.90527 8.86035,6.76074c5.08105,5.75293 7.85254,12.3877 7.85254,12.3877l1.84766,4.57715l20.70215,-6.25683l10.24609,-3.10743l-4.66114,-15.45312c-1.46972,-4.8291 -4.87109,-8.44043 -8.77636,-10.91797c-3.90527,-2.51953 -8.35645,-4.03125 -12.93359,-4.03125zM123.96094,22.00391c1.97364,0 4.8291,0.83984 7.09668,2.26758c2.26758,1.46972 3.86328,3.48534 4.3252,5.03906l1.55371,5.12304l-12.13574,3.69531c-1.30176,-2.72949 -2.35156,-5.87891 -7.05469,-11.16992c-1.30176,-1.51172 -2.89746,-2.89747 -4.53516,-4.28321c4.15723,-0.41992 7.89453,-0.67187 10.75,-0.67187zM36.95313,45.77149c-0.62989,2.01563 -1.13379,4.07324 -1.42773,6.04688c-0.96582,7.09668 -0.08399,10.24609 0.37793,13.26953l-12.13574,3.69531l-1.55372,-5.16504c-0.46191,-1.59571 -0.29394,-4.11524 0.79785,-6.59277c1.0918,-2.47754 2.98145,-4.74513 4.61915,-5.87891c2.35156,-1.59571 5.58496,-3.44336 9.32226,-5.375zM129,53.75v10.75h21.5v-10.75zM64.5,64.5v11.42188l-0.50391,0.33594c0,0 -7.76855,5.66895 -15.5371,14.19336c-7.81055,8.48242 -16.20899,19.94628 -16.20899,33.17382v10.75c0,8.86035 7.26465,16.125 16.125,16.125h86c8.86035,0 16.125,-7.26465 16.125,-16.125v-10.75c0,-13.22754 -8.39844,-24.69141 -16.16699,-33.17382c-7.81055,-8.52442 -15.5791,-14.19336 -15.5791,-14.19336l-0.50391,-0.33594v-11.42187h-10.75v10.75h-32.25v-10.75zM69.20313,86h44.34375c0.96582,0.75586 6.4248,4.70313 12.80761,11.67383c7.0127,7.64257 13.39551,17.67871 13.39551,25.95117v10.75c0,3.02344 -2.35156,5.375 -5.375,5.375h-86c-3.02344,0 -5.375,-2.35156 -5.375,-5.375v-10.75c0,-8.27246 6.38281,-18.30859 13.35352,-25.95117c6.4248,-6.97071 11.88378,-10.91797 12.8496,-11.67383zM64.5,96.75v10.75h10.75v-10.75zM86,96.75v10.75h10.75v-10.75zM107.5,96.75v10.75h10.75v-10.75zM64.5,118.25v10.75h10.75v-10.75zM86,118.25v10.75h10.75v-10.75zM107.5,118.25v10.75h10.75v-10.75z"></path></g></g>
+                    </svg>
+                    <p>Tel: +216 92 104 649</p>
+                </div>
+                <div class="box-info">
+                    <svg xmlns="http://www.w3.org/2000/svg" x="0px" y="0px"
+                        width="96" height="96"
+                        viewBox="0 0 172 172"
+                        style=" fill:#000000;"><g fill="none" fill-rule="nonzero" stroke="none" stroke-width="1" stroke-linecap="butt" stroke-linejoin="miter" stroke-miterlimit="10" stroke-dasharray="" stroke-dashoffset="0" font-family="none" font-weight="none" font-size="none" text-anchor="none" style="mix-blend-mode: normal"><path d="M0,172v-172h172v172z" fill="none"></path><g fill="#b4b40a"><path d="M86,21.5c-17.74321,0 -32.25,14.50679 -32.25,32.25c0,5.33164 2.01286,10.7904 4.66113,16.81787c2.22998,5.07543 5.0461,10.35388 7.91553,15.43213h-28.70166c-2.20058,-0.00225 -4.18031,1.33697 -4.99707,3.38037l-21.5,53.75c-0.66186,1.65688 -0.45849,3.5342 0.54281,5.01092c1.00131,1.47672 2.67007,2.3604 4.45426,2.35871h139.75c1.78419,0.00169 3.45295,-0.88199 4.45426,-2.35871c1.00131,-1.47672 1.20467,-3.35403 0.54281,-5.01092l-21.5,-53.75c-0.81676,-2.0434 -2.79649,-3.38263 -4.99707,-3.38037h-28.70166c2.86942,-5.07825 5.68556,-10.3567 7.91552,-15.43213c2.64827,-6.02747 4.66114,-11.48623 4.66114,-16.81787c0,-17.74321 -14.50679,-32.25 -32.25,-32.25zM86,32.25c11.92679,0 21.5,9.57321 21.5,21.5c0,2.08586 -1.34652,7.05124 -3.7373,12.49268c-2.39079,5.44143 -5.66842,11.57491 -8.96533,17.25879c-4.3866,7.5625 -6.34526,10.25358 -8.79736,13.94141c-2.4521,-3.68783 -4.41076,-6.37891 -8.79736,-13.94141c-3.29691,-5.68388 -6.57454,-11.81736 -8.96533,-17.25879c-2.39079,-5.44143 -3.7373,-10.40681 -3.7373,-12.49268c0,-11.92679 9.57321,-21.5 21.5,-21.5zM86,43c-5.93706,0 -10.75,4.81294 -10.75,10.75c0,5.93706 4.81294,10.75 10.75,10.75c5.93706,0 10.75,-4.81294 10.75,-10.75c0,-5.93706 -4.81294,-10.75 -10.75,-10.75zM41.25732,96.75h31.51514c4.72829,7.62307 8.79736,13.79443 8.79736,13.79443l4.43018,6.40381l4.43018,-6.40381c0,0 4.06907,-6.17136 8.79736,-13.79443h31.51513l17.19581,43h-123.87696z"></path></g></g>
+                    </svg>
+                    <p>Remla, Kerkennah</p>
+                </div>
+                <div class="box-info">
+                    <svg xmlns="http://www.w3.org/2000/svg" x="0px" y="0px"
+                        width="96" height="96"
+                        viewBox="0 0 172 172"
+                        style=" fill:#000000;"><g fill="none" fill-rule="nonzero" stroke="none" stroke-width="1" stroke-linecap="butt" stroke-linejoin="miter" stroke-miterlimit="10" stroke-dasharray="" stroke-dashoffset="0" font-family="none" font-weight="none" font-size="none" text-anchor="none" style="mix-blend-mode: normal"><path d="M0,172v-172h172v172z" fill="none"></path><g fill="#b4b40a"><path d="M26.875,21.5c-8.86035,0 -16.125,7.26465 -16.125,16.125v86c0,8.86035 7.26465,16.125 16.125,16.125h118.25c8.86035,0 16.125,-7.26465 16.125,-16.125v-86c0,-8.86035 -7.26465,-16.125 -16.125,-16.125zM26.875,32.25h118.25c0.37793,0 0.67188,0.12598 1.00781,0.20996l-60.13281,41.61426l-60.13281,-41.61426c0.33594,-0.08398 0.62989,-0.20996 1.00781,-0.20996zM21.5,42.49609l64.5,44.67969l64.5,-44.67969v76.13183l-33.76172,-28.26074l-9.23828,6.38281l38.42285,32.08203c-0.25196,0.04199 -0.50391,0.16797 -0.79785,0.16797h-118.25c-0.29395,0 -0.5459,-0.12598 -0.79785,-0.16797l38.42285,-32.08203l-9.23828,-6.38281l-33.76172,28.26074z"></path></g></g>
+                    </svg>
+                    <p>Email: othmaniamir41@gmail.com</p>
+                </div>
+            </div>
         </section>
     </div>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.8.0/gsap.min.js" integrity="sha512-eP6ippJojIKXKO8EPLtsUMS+/sAGHGo1UN/38swqZa1ypfcD4I0V/ac5G3VzaHfDaklFmQLEs51lhkkVaqg60Q==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
