--- a/index.html
+++ b/index.html
@@ -35,6 +35,7 @@
             <div class="intro">
                 <h2>Tic Tac Toe Game</h2>
                 <p>sdvsd sfdfsd fsdf sdg fsgg hhgfhj fhfgj hj hgfhfg hd fsdf sdg jf hdv xcv xdgsgsdgs wd fsdgs gs dgdsds </p>
+                <button class="button">Play</button>
             </div>
             <img src="pexels-elīna-arāja-3400795.jpg" alt="">
         </section>
@@ -42,18 +43,20 @@
             <div class="intro-small">
                 <h2>Maze Game</h2>
                 <p>sdvsd sfdfsd fsdf sdg fsgg hhgfhj fhfgj hj hgfhfg hd fsdf sdg jf hdv xcv xdgsgsdgs wd fsdgs gs dgdsds </p>
+                <button class="button">Play</button>
             </div>
             <img src="pexels-monstera-7352866.jpg" alt="">
             <div class="intro-large">
                 <h2>Maze Game</h2>
                 <p>sdvsd sfdfsd fsdf sdg fsgg hhgfhj fhfgj hj hgfhfg hd fsdf sdg jf hdv xcv xdgsgsdgs wd fsdgs gs dgdsds </p>
+                <button class="button">Play</button>
             </div>
         </section>
         <section class="contact-page">
             <div class="main">
                 <h2>Contact Us</h2>
                 <p>Simple text. Click to select the text box. Click again or ouble click to start editing the text</p>
-                <form action="https://formsubmit.co/othmaniamir41@gmail.com" method="POST">
+                <form action="e348ebe8d1a17ce79929f34142bb28cf" method="POST">
                     <input type="hidden" name="_next" value="http://127.0.0.1:5501/thanks.html">
                     <input type="hidden" name="_subject" value="New submission!">
                     <label for="fname">Enter your Name</label>
